[tool.poetry]
name = "datastruct"
version = "0.1.0"
description = ""
authors = ["maksfrol96 <maxfrol96@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^7.1.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
